2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.4

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: do not provide services/runlevels roles. if 
	the users of s-t-b want this will need to have their own heuristic.
	* ServicesConfig.pm: do not export services/runlevels roles in the
	DBus struct.

2006-09-04  Carlos Garnacho  <carlosg@gnome.org>

	* Services.pm (run_sysv_initd_script) (run_bsd_script)
	(run_gentoo_script) (run_rcng_script) (run_script): Added back.

	(set_sysv_service) (set_filerc_service) (set_bsd_services)
	(set_gentoo_service_status) (set_rcng_service_status)
	(set_archlinux_service_status) (set_suse_services): call the
	appropiate functions to start/stop a service.

2006-08-29  Carlos Garnacho  <carlosg@gnome.org>

	* Time/NTP.pm: set the time with ntpdate if available. ATM it will
	only work if there isn't a NTP server running.

2006-08-23  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Platform.pm (check_file_exists): fix distro detection in the
	Gentoo case.
	(set_platform), (ensure_platform): code improvements.

2006-08-12  Carlos Garnacho  <carlosg@gnome.org>

	* Release 1.9.3

2006-08-12  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services.pm: fixes to file-rc services parsing

2006-08-12  Cezary Krzyżanowski  <cezary.krzyzanowski@gmail.com>

	* Utils/Platform.pm: added support for PLD 2.99

2006-08-11  Carlos Garnacho  <carlosg@gnome.org>

	* Init/ServicesList.pm: add postgresql-8.1 to the list. Ubuntu patch
	* Network/Ifaces.pm (check_capi): modified Ubuntu patch. More reliable
	ISDN detection on Linux.
	(get_interface_replace_table) (set): hardcode serial speed to 115200.
	Modified Ubuntu patch
	* Utils/Backend.pm (daemonize) (set_no_daemon) (init): run daemonized
	by default, add --no-daemon. Modified Ubuntu patch. Also, remove lots
	of unused code
	* Utils/File.pm (get_data_path): removed, no longer necessary
	* Utils/Platform.pm: slight code fixes